--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "animejs": "^3.2.2",
+        "dayjs": "^1.11.13",
         "flowbite": "^2.5.2",
         "flowbite-vue": "^0.1.6",
         "gsap": "^3.12.5",
