--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "flowbite": "^2.5.2",
         "flowbite-vue": "^0.1.6",
         "gsap": "^3.12.5",
+        "split-type": "^0.3.4",
         "three": "^0.169.0"
     }
 }
